<resources>
    <string name="app_name">Carpet Webshop Projekt</string>
    <string name="item_name">Név</string>
    <string name="price_title">Bruttó egységár</string>
    <string name="price_placeholder">1999 Ft/db</string>
    <string name="add_to_cart">Kosárba</string>
    <string name="email_hint">E-mail cím</string>
    <string name="password_hint">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="login_with_google">Bejelentkezés Google fiókkal</string>
    <string name="register">Regisztráció</string>
    <string name="vezeteknev">Vezetéknév</string>
    <string name="keresztnev">Keresztnév</string>
    <string name="cancel">Mégsem</string>
    <string name="password_confirm">Jelszó megerősítése</string>

    <string-array name="carpet_names">
        <item>Kiddy Star szőnyeg\n120x170 cm</item>
        <item>Play City szőnyeg\n160x230 cm</item>
        <item>Kiddy Pastel szőnyeg\n120x170 cm</item>
        <item>Kiddy Night szőnyeg\n120x170 cm</item>
        <item>Kiddy Bunny szőnyeg\n160x230 cm</item>
        <item>Pastel Kids dog szőnyeg\n120x170 cm</item>
        <item>Kiddy Stripe szőnyeg\n80x150 cm</item>
        <item>Cannes Kids racoon szőnyeg\n160x230 cm</item>
        <item>Cattleya mustar grey szőnyeg\n120x170 cm</item>
        <item>Estella beige szőnyeg\n120x170 cm</item>
        <item>Estella blue szőnyeg\n120x170 cm</item>
        <item>Estella black szőnyeg\n120x170 cm</item>
        <item>Tunis beige blue szőnyeg\n160x230 cm</item>
        <item>Prato grey szőnyeg\n80x150 cm</item>
        <item>Savanna gold szőnyeg\n160x230 cm</item>
        <item>Bamboo stripe szőnyeg\n200x290 cm</item>
        <item>Sisalo Coffee brown konyhai szőnyeg\n80x200 cm</item>
        <item>Kitchen vinyl konyhai szőnyeg\n65x150 cm</item>
        <item>Kitchen wine konyhai szőnyeg\n60x150 cm</item>
        <item>Sisalo Drinks konyhai szőnyeg\n80x200 cm</item>
        <item>Sisalo Coffee konyhai szőnyeg\n80x200 cm</item>
        <item>Kitchen Grill konyhai szőnyeg\n60x90 cm</item>
        <item>Kitchen Aroma konyhai szőnyeg\n45x145 cm</item>
        <item>Kitchen Stone konyhai szőnyeg\n45x145 cm</item>
        <item>Kitchen Marokko konyhai szőnyeg\n45x145 cm</item>
        <item>Loft Bath sand fürdőszobaszőnyeg\n50x80 cm</item>
        <item>Loft Bath grey fürdőszobaszőnyeg\n50x80 cm</item>
        <item>Loft Bath cream fürdőszobaszőnyeg\n80 cm kör</item>
        <item>Loft Bath cream fürdőszobaszőnyeg\n50x80 cm</item>
        <item>Loft Bath grey fürdőszobaszőnyeg\n80 cm kör</item>
        <item>Loft Bath sand fürdőszobaszőnyeg\n80 cm kör</item>
        <item>Loft Bath rose fürdőszobaszőnyeg\n50x80 cm</item>
        <item>Loft Bath rose fürdőszobaszőnyeg\n80 cm kör</item>
        <item>Rabbit grey fürdőszobaszőnyeg\n50x80 cm</item>
        <item>Rabbit pink fürdőszobaszőnyeg\n50x80 cm</item>
        <item>Star cream fürdőszobaszőnyeg\n50x80 cm</item>
        <item>Bafi Shaggy sand szőnyeg\n120x170 cm</item>
        <item>Bafi Shaggy grey szőnyeg\n120x170 cm</item>
        <item>Bafi Shaggy brown szőnyeg\n120x170 cm</item>
        <item>Aspero cream szőnyeg\n120x170 cm</item>
        <item>Kendra beige szőnyeg\n160x230 cm</item>
        <item>Relax beige szőnyeg\n160x230 cm</item>
        <item>Relax waves szőnyeg\n160x230 cm</item>
        <item>Relax grey szőnyeg\n160x230 cm</item>
        <item>Royal Palace multi szőnyeg\n160x230 cm</item>
        <item>Tamara beige szőnyeg\n120x170 cm</item>
        <item>Impala rectangle szőnyeg\n120x170 cm</item>
        <item>Neva gold szőnyeg\n 152x230 cm</item>
        <item>Signal squares szőnyeg\n160x230 cm</item>
        <item>Cannes gold szőnyeg\n120x170 cm</item>
        <item>Cannes square szőnyeg\n120x170 cm</item>
        <item>Impala wave beige szőnyeg\n120x170 cm</item>
    </string-array>

    <string-array name="carpet_prices">
        <item>24 990 Ft/db</item>
        <item>34 990 Ft/db</item>
        <item>24 990 Ft/db</item>
        <item>24 990 Ft/db</item>
        <item>43 990 Ft/db</item>
        <item>27 990 Ft/db</item>
        <item>13 990 Ft/db</item>
        <item>31 490 Ft/db</item>
        <item>14 990 Ft/db</item>
        <item>14 990 Ft/db</item>
        <item>14 990 Ft/db</item>
        <item>14 990 Ft/db</item>
        <item>24 990 Ft/db</item>
        <item>9 990 Ft/db</item>
        <item>38 990 Ft/db</item>
        <item>62 990 Ft/db</item>
        <item>12 990 Ft/db</item>
        <item>13 990 Ft/db</item>
        <item>12 990 Ft/db</item>
        <item>12 990 Ft/db</item>
        <item>12 990 Ft/db</item>
        <item>7 990 Ft/db</item>
        <item>9 490 Ft/db</item>
        <item>9 490 Ft/db</item>
        <item>9 490 Ft/db</item>
        <item>2 999 Ft/db</item>
        <item>2 999 Ft/db</item>
        <item>4 999 Ft/db</item>
        <item>2 999 Ft/db</item>
        <item>4 999 Ft/db</item>
        <item>4 999 Ft/db</item>
        <item>4 299 Ft/db</item>
        <item>7 199 Ft/db</item>
        <item>5 190 Ft/db</item>
        <item>7 490 Ft/db</item>
        <item>7 490 Ft/db</item>
        <item>35 990 Ft/db</item>
        <item>35 990 Ft/db</item>
        <item>35 990 Ft/db</item>
        <item>22 990 Ft/db</item>
        <item>39 990 Ft/db</item>
        <item>64 990 Ft/db</item>
        <item>64 990 Ft/db</item>
        <item>64 990 Ft/db</item>
        <item>32 990 Ft/db</item>
        <item>16 790 Ft/db</item>
        <item>32 990 Ft/db</item>
        <item>33 990 Ft/db</item>
        <item>45 990 Ft/db</item>
        <item>17 490 Ft/db</item>
        <item>17 490 Ft/db</item>
        <item>32 990 Ft/db</item>
    </string-array>

    <string-array name="carpet_categories">
        <item>gyerek</item>
        <item>gyerek</item>
        <item>gyerek</item>
        <item>gyerek</item>
        <item>gyerek</item>
        <item>gyerek</item>
        <item>gyerek</item>
        <item>gyerek</item>
        <item>kulteri</item>
        <item>kulteri</item>
        <item>kulteri</item>
        <item>kulteri</item>
        <item>kulteri</item>
        <item>kulteri</item>
        <item>kulteri</item>
        <item>kulteri</item>
        <item>konyha</item>
        <item>konyha</item>
        <item>konyha</item>
        <item>konyha</item>
        <item>konyha</item>
        <item>konyha</item>
        <item>konyha</item>
        <item>konyha</item>
        <item>konyha</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>furdoszoba</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
        <item>darab</item>
    </string-array>

    <array name="carpet_images">
        <item>@drawable/kiddy_star</item>
        <item>@drawable/play_city</item>
        <item>@drawable/kiddy_pastel</item>
        <item>@drawable/kiddy_night</item>
        <item>@drawable/kiddy_bunny</item>
        <item>@drawable/pastel_kids_dog</item>
        <item>@drawable/kiddy_stripe</item>
        <item>@drawable/cannes_kids_racoon</item>
        <item>@drawable/cattleya_mustar</item>
        <item>@drawable/estella_beige</item>
        <item>@drawable/estella_blue</item>
        <item>@drawable/estella_black</item>
        <item>@drawable/tunis_beige_blue</item>
        <item>@drawable/prato_grey</item>
        <item>@drawable/savanna_gold</item>
        <item>@drawable/bamboo_stripe</item>
        <item>@drawable/sisalo_coffee_brown</item>
        <item>@drawable/kitchen_vinyl</item>
        <item>@drawable/kitchen_wine</item>
        <item>@drawable/sisalo_drinks</item>
        <item>@drawable/sisalo_coffee</item>
        <item>@drawable/kitchen_grill</item>
        <item>@drawable/kitchen_aroma</item>
        <item>@drawable/kitchen_stone</item>
        <item>@drawable/kitchen_marokko</item>
        <item>@drawable/loft_bath_sand</item>
        <item>@drawable/loft_bath_grey</item>
        <item>@drawable/loft_cream_kor</item>
        <item>@drawable/loft_bath_cream</item>
        <item>@drawable/loft_grey_kor</item>
        <item>@drawable/loft_sand_kor</item>
        <item>@drawable/loft_bath_rose</item>
        <item>@drawable/loft_rose_kor</item>
        <item>@drawable/rabbit_grey</item>
        <item>@drawable/rabbit_pink</item>
        <item>@drawable/star_cream</item>
        <item>@drawable/bafi_shaggy_sand</item>
        <item>@drawable/bafi_shaggy_grey</item>
        <item>@drawable/bafi_shaggy_brown</item>
        <item>@drawable/aspero_cream</item>
        <item>@drawable/kendra_beige</item>
        <item>@drawable/relax_beige</item>
        <item>@drawable/relax_waves</item>
        <item>@drawable/relax_grey</item>
        <item>@drawable/royal_palace</item>
        <item>@drawable/tamara_beige</item>
        <item>@drawable/impala_rectangle</item>
        <item>@drawable/neva_gold</item>
        <item>@drawable/signal_squares</item>
        <item>@drawable/cannes_gold</item>
        <item>@drawable/cannes_square</item>
        <item>@drawable/impala_wave</item>
    </array>

    <string name="title_activity_test">test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="logout">Kijelentkezés</string>
    <string name="default_web_client_id">933418635689-fu2npagvp8umfffl0ajn76tvlu87n495.apps.googleusercontent.com</string>
    <string name="profile">Profilom</string>
    <string name="name">Név</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Szállítási cím</string>
    <string name="city">Város</string>
    <string name="postal_code">Ir. Szám</string>
    <string name="street_address">Utca, Házszám</string>
    <string name="edit_profile">Profil szerkesztése</string>
    <string name="edit">Szerkesztés</string>
    <string name="open_nav">Open Nav</string>
    <string name="close_nav">Close Nav</string>
    <string name="all_carpets">Összes szőnyeg</string>
    <string name="bathroom_carpets">Fürdőszobaszőnyegek</string>
    <string name="childrens_carpets">Gyerekszőnyegek</string>
    <string name="kitchen_carpets">Konyhaszőnyegek</string>
    <string name="outdoor_carpets">Kültéri szőnyegek</string>
    <string name="receipts">Számláim</string>
    <string name="darab_carpets">Darabszőnyegek</string>
    <string name="total">Összesen</string>
    <string name="amount">Mennyiség</string>
    <string name="order">Rendelés</string>
    <string name="back">Vissza</string>
    <string name="cart_is_empty">A kosara üres</string>
    <string name="order_instructions">Kérjük adja meg az adatait</string>
    <string name="no_receipts">Még nincsenek számlái</string>
    <string name="receipt_name_placeholder">Számla neve</string>
    <string name="notify_me">Értesítést szeretnék kapni, ha elkészült a számla</string>
    <string name="receipt_id">Számla azonosító:</string>
    <string name="receipt_id_placeholder">91827361298376</string>
    <string name="name_placeholder">Joe Mama</string>
    <string name="postal_code_placeholder">69420</string>
    <string name="city_placeholder">Kesztölc</string>
    <string name="address_placeholder">Bing Bong 6</string>
    <string name="total_placeholder">389940</string>
</resources>