<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="navigation_view">



    <group android:checkableBehavior="single">

        <item
            android:id="@+id/allCarpets"
            android:title="@string/all_carpets"
            android:icon="@drawable/carpet_all"/>

        <item
            android:id="@+id/darabCarpets"
            android:title="@string/darab_carpets"
            android:icon="@drawable/carpet_darab"/>

        <item
            android:id="@+id/outdoorCarpets"
            android:title="@string/outdoor_carpets"
            android:icon="@drawable/carpet_kulteri"/>

        <item
            android:id="@+id/bathroomCarpets"
            android:title="@string/bathroom_carpets"
            android:icon="@drawable/carpet_furdoszoba"/>

        <item
            android:id="@+id/childrensCarpets"
            android:title="@string/childrens_carpets"
            android:icon="@drawable/carpet_gyerek"/>

        <item
            android:id="@+id/kitchenCarpets"
            android:title="@string/kitchen_carpets"
            android:icon="@drawable/carpet_konyha"/>

        <item android:title=""/>

        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/profile"/>

        <item
            android:id="@+id/receipts"
            android:title="@string/receipts"
            android:icon="@drawable/receipt"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>

</menu>