<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:padding="40dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/edit_profile"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary_information_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/nameLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <EditText
            android:id="@+id/vnevET"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/vezeteknev" />

        <EditText
            android:id="@+id/knevET"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/keresztnev" />

    </LinearLayout>

    <EditText
        android:id="@+id/postalCodeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/postal_code"
        app:layout_constraintTop_toBottomOf="@+id/nameLL"
        tools:layout_editor_absoluteX="40dp" />

    <EditText
        android:id="@+id/cityET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/city"
        app:layout_constraintTop_toBottomOf="@+id/postalCodeET"
        tools:layout_editor_absoluteX="40dp" />

    <EditText
        android:id="@+id/streetET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/street_address"
        app:layout_constraintTop_toBottomOf="@+id/cityET"
        tools:layout_editor_absoluteX="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/streetET"
        tools:layout_editor_absoluteX="40dp">

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:onClick="saveChanges"
            android:text="@string/edit"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            app:cornerRadius="5dp"
            app:iconGravity="end"
            app:iconTint="@color/dark_blue"
            app:strokeColor="@color/dark_blue"
            app:strokeWidth="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>