<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40dp">

    <TextView
        android:id="@+id/registrationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="55dp"/>

    <LinearLayout
        android:id="@+id/names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/registrationTV"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/vezetekNevET"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:hint="@string/vezeteknev"
            android:inputType="textPersonName"
            android:autofillHints="name"
            />

        <EditText
            android:id="@+id/keresztNevET"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:hint="@string/keresztnev"
            android:inputType="textPersonName"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A vezetéknév és keresztnév megadása nem kötelező"
        android:layout_below="@+id/names"
        android:layout_marginBottom="30dp"
        android:paddingHorizontal="5dp"
        android:textSize="13sp"
        android:textColor="@color/dark_blue"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginBottom="40dp"
        android:layout_below="@id/info"/>

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginBottom="40dp"
        android:layout_below="@id/emailET"/>

    <EditText
        android:id="@+id/passwordConfirmET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginBottom="40dp"
        android:layout_below="@id/passwordET"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/passwordConfirmET">

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:cornerRadius="5dp"
            android:layout_marginEnd="29dp"
            android:onClick="cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:onClick="register"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            app:cornerRadius="5dp"
            app:icon="@drawable/register"
            app:iconGravity="end"
            app:iconTint="@color/dark_blue"
            app:strokeColor="@color/dark_blue"
            app:strokeWidth="2dp" />

    </LinearLayout>



</RelativeLayout>