<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbarSize="0dp">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity"
    android:scrollbars="vertical"
    android:scrollbarSize="0dp"
    android:padding="40dp">

    <TextView
        android:id="@+id/orderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/order"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary_information_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTextView" />

    <TextView
        android:id="@+id/orderInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintBottom_toTopOf="@id/orderNameLL"
        android:textColor="@color/secondary_information_color"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/orderNameLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <EditText
            android:id="@+id/orderVnevET"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/vezeteknev"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/orderKnevET"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/keresztnev"
            android:inputType="textPersonName"/>

    </LinearLayout>

    <EditText
        android:id="@+id/orderPostalCodeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/postal_code"
        app:layout_constraintTop_toBottomOf="@+id/orderNameLL"
        tools:layout_editor_absoluteX="40dp"
        android:inputType="textPostalAddress"
        android:autofillHints="postalCode"/>

    <EditText
        android:id="@+id/orderCityET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/city"
        app:layout_constraintTop_toBottomOf="@+id/orderPostalCodeET"
        tools:layout_editor_absoluteX="40dp"
        android:inputType="textPostalAddress"
        android:autofillHints="postalAddress"/>

    <EditText
        android:id="@+id/orderAddressET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/street_address"
        app:layout_constraintTop_toBottomOf="@+id/orderCityET"
        tools:layout_editor_absoluteX="40dp"
        android:inputType="textPostalAddress"
        android:autofillHints="postalAddress"/>

    <CheckBox
        android:id="@+id/notificationCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_me"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderAddressET" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/orderAddressET"
        tools:layout_editor_absoluteX="40dp">

        <Button
            android:id="@+id/cancelOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/finalizeOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:onClick="finalizeOrder"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@color/primary_color"
            app:cornerRadius="5dp"
            app:iconGravity="end"
            app:iconTint="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>