<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:contentPadding="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/itemImage"
            android:padding="8dp"
            android:layout_marginVertical="10dp"
            android:text="@string/item_name" />

        <TextView
            android:id="@+id/priceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:padding="8dp"
            android:text="@string/price_title"
            android:textColor="@color/secondary_information_color"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:layout_alignParentEnd="true"
            android:padding="8dp"
            android:text="@string/price_placeholder"
            android:textColor="@color/primary_color"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/addToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:text="@string/add_to_cart"
            android:textAllCaps="true"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/primary_color"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>
