<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:contentPadding="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/shoppingCartItemImage"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/shoppingCartItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/shoppingCartItemImage"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="10dp"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/shoppingCartTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/shoppingCartItemName"
            android:layout_toEndOf="@id/shoppingCartItemImage"
            android:text="@string/amount"/>

        <TextView
            android:id="@+id/shoppingCartAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/shoppingCartItemName"
            android:layout_alignParentEnd="true"
            android:text="@string/amount"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/secondary_information_color"
            android:layout_below="@+id/shoppingCartTotalLabel"
            android:layout_toEndOf="@id/shoppingCartItemImage"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_toEndOf="@id/shoppingCartItemImage"
            android:text="@string/total"/>

        <TextView
            android:id="@+id/shoppingCartTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/view"
            android:text="@string/price_placeholder"/>

        <ImageButton
            android:id="@+id/addCarpet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shoppingCartTotal"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/add"/>

        <ImageButton
            android:id="@+id/removeCarpet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shoppingCartTotal"
            android:layout_toStartOf="@id/addCarpet"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/remove"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>